--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <header class="header">
       <p>hola mundo</p>
       <img src="./Images/logo.png" width="69" height="20" alt="logo" />
-      <button>Curriculum</button>
+      <button class="button">Curriculum</button>
+      <button class="button-is-secondary">Curriculum</button>
     </header>
   </body>
 </html>
