--- a/index.html
+++ b/index.html
@@ -18,7 +18,37 @@
       <p>hola mundo</p>
       <img src="./Images/logo.png" width="69" height="20" alt="logo" />
       <button class="button">Curriculum</button>
-      <button class="button-is-secondary">Curriculum</button>
+      <button class="button is-secondary">Curriculum</button>
     </header>
+    <section class="hero">
+      <div class="hero-image">
+        <img src="./Images/user.png" width="338" height="330" alt="" />
+      </div>
+      <div>
+        <h1>
+          <span>!Hola a todos!</span>
+          <span>Soy David</span>
+        </h1>
+      </div>
+      <p>
+        Frontend Developer que le encanta implementar diseños que inspiran y
+        atraen a las personas.
+      </p>
+      <div class="social">
+        <a class="button-icon" href="tel:3177000722"
+          ><img src="./icons/icon-phone.svg"
+        /></a>
+        <a class="button-icon" href="tel:3177000722"
+          ><img src="./icons/icon-important_mail.svg"
+        /></a>
+        <a class="button-icon" href="tel:3177000722"
+          ><img src="./icons/icon-instagram.svg"
+        /></a>
+        <a class="button-icon" href="tel:3177000722"
+          ><img src="./icons/icon-twitter_squared.svg"
+        /></a>
+        <a href="" class="button">Descargar Curriculum</a>
+      </div>
+    </section>
   </body>
 </html>
