--- a/index.html
+++ b/index.html
@@ -14,39 +14,54 @@
     />
   </head>
   <body>
-    <header class="header">
-      <img src="./Images/logo.png" width="69" height="20" alt="logo" />
-      <button class="button">Curriculum</button>
-    </header>
-    <section class="hero">
-      <div class="hero-image">
-        <img src="./Images/user.png" width="338" height="330" alt="" />
-      </div>
-      <div class="hero-description">
-        <h1>
-          <span>!Hola a todos!</span>
-          <span>Soy David</span>
-        </h1>
-        <p>
-          Frontend Developer que le encanta implementar diseños que inspiran y
-          atraen a las personas.
-        </p>
-        <div class="social">
-          <a class="button-icon" href="tel:3177000722"
-            ><img src="./icons/icon-phone.svg"
-          /></a>
-          <a class="button-icon" href="tel:3177000722"
-            ><img src="./icons/icon-important_mail.svg"
-          /></a>
-          <a class="button-icon" href="tel:3177000722"
-            ><img src="./icons/icon-instagram.svg"
-          /></a>
-          <a class="button-icon" href="tel:3177000722"
-            ><img src="./icons/icon-twitter_squared.svg"
-          /></a>
+    <div class="wrapper">
+      <header class="header">
+        <img src="./Images/logo.png" width="69" height="20" alt="logo" />
+        <nav class="menu">
+          <ul>
+            <li>
+              <a class="is-active" href="#main">Hola</a>
+            </li>
+            <li>
+              <a href="#project">Proyectos</a>
+            </li>
+            <li>
+              <a href="#contact">Hablemos</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="button">Curriculum</button>
+      </header>
+      <section class="hero">
+        <div class="hero-image">
+          <img src="./Images/user.png" width="338" height="330" alt="" />
         </div>
-        <a href="" class="button">Descargar Curriculum</a>
-      </div>
-    </section>
+        <div class="hero-description">
+          <h1>
+            <span>!Hola a todos!</span>
+            <span>Soy David</span>
+          </h1>
+          <p>
+            Frontend Developer que le encanta implementar diseños que inspiran y
+            atraen a las personas.
+          </p>
+          <div class="hero-social">
+            <a class="button-icon" href="tel:3177000722"
+              ><img src="./icons/icon-phone.svg"
+            /></a>
+            <a class="button-icon" href="tel:3177000722"
+              ><img src="./icons/icon-important_mail.svg"
+            /></a>
+            <a class="button-icon" href="tel:3177000722"
+              ><img src="./icons/icon-instagram.svg"
+            /></a>
+            <a class="button-icon" href="tel:3177000722"
+              ><img src="./icons/icon-twitter_squared.svg"
+            /></a>
+          </div>
+          <a href="" class="button">Descargar Curriculum</a>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
