--- a/index.html
+++ b/index.html
@@ -17,17 +17,23 @@
     <header class="header">
       <div class="wrapper">
         <div class="header-content">
-          <img src="./Images/logo.png" width="69" height="20" alt="logo" />
+          <img
+            class="logo"
+            src="./Images/logo.svg"
+            width="250"
+            height="250"
+            alt="logo"
+          />
           <nav class="menu">
             <ul>
               <li>
                 <a class="is-active" href="#main">Hola</a>
               </li>
               <li>
-                <a href="#project">Proyectos</a>
+                <a href="#project">Projects</a>
               </li>
               <li>
-                <a href="#contact">Hablemos</a>
+                <a href="#contact">Contact</a>
               </li>
             </ul>
           </nav>
@@ -38,16 +44,16 @@
     <div class="wrapper">
       <section class="hero">
         <div class="hero-image">
-          <img src="./Images/user.png" width="338" height="330" alt="" />
+          <img src="./Images/user.png" alt="" />
         </div>
         <div class="hero-description">
           <h1>
-            <span>!Hola a todos!</span>
-            <span>Soy David</span>
+            <span>!Hi Everyone!</span>
+            <span>I Am David</span>
           </h1>
           <p>
-            Frontend Developer que le encanta implementar diseños que inspiran y
-            atraen a las personas.
+            Web Developer with a full-stack profile, que le encanta implementar
+            diseños que inspiran y atraen a las personas.
           </p>
           <div class="social">
             <a class="button-icon" href="tel:3177000722"
@@ -190,7 +196,7 @@
       <footer class="footer" id="contact">
         <div class="footer-content">
           <div class="footer-logo">
-            <img src="./Images/logo.png" width="69" height="20" alt="logo" />
+            <img src="./Images/logo.svg" width="250" height="250" alt="logo" />
           </div>
           <div class="social">
             <a class="button-icon" href="tel:3177000722"
