Copy changed to english

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
       </div>
     </header>
     <div class="wrapper">
-      <section class="hero">
+      <section class="hero" id="main">
         <div class="hero-image">
           <img src="./Images/user.png" alt="" />
         </div>
         <div class="hero-description">
           <h1>
-            <span>!Hi Everyone!</span>
-            <span>I Am David</span>
+            <span>Hi Everyone!</span>
+            <span>I Am David,</span>
           </h1>
           <p>
-            Web Developer with a full-stack profile, que le encanta implementar
-            diseños que inspiran y atraen a las personas.
+            Web Developer with a Full-Stack profile, who loves to implement
+            functional designs and provide solutions.
           </p>
           <div class="social">
             <a class="button-icon" href="tel:3177000722"
@@ -69,20 +69,20 @@
               ><img src="./icons/icon-twitter_squared.svg"
             /></a>
           </div>
-          <a href="" class="button">Descargar Curriculum</a>
+          <a href="" class="button">Download Curriculum</a>
         </div>
       </section>
       <section class="comment">
         <h1>
           <span
-            >A lo largo de mi carrera como Frontend, he tenido el privilegio de
-            trabajar en proyectos retadores e increíbles</span
+            >Throughout my carrer I have had the privilege of developing
+            interesting and challenging projects.</span
           >
-          <span>Aquí hay algunos que me gustaría compartir.</span>
+          <span>Here is some I would like to share.</span>
         </h1>
         <a href="#"><img src="./icons/icons-down.svg" /></a>
       </section>
-      <div class="project">
+      <div class="project" id="project">
         <div class="project-image">
           <img src="./Images/leo.png" alt="" />
         </div>
@@ -151,20 +151,19 @@
           >
         </div>
       </div>
-      <form action="" method="GET" class="form">
+      <form action="" method="GET" class="form" id="contact">
         <div class="form-content">
-          <h2 class="title">Hablemos</h2>
+          <h2 class="title">Let's talk!</h2>
           <p>
-            Si está interesado en trabajar conmigo en su próximo proyecto, no
-            dude en ponerse en contacto conmigo.
+            I am up to start working with you, do not hesitate to hit me up.
           </p>
           <label for="form-name"
-            >Nombre completo
+            >Name
             <input
               name="name"
               id="form-name"
               type="text"
-              placeholder="Nombre completo"
+              placeholder="Name"
               required
             />
           </label>
@@ -179,21 +178,21 @@
             />
           </label>
           <label for="form-name"
-            >Mensaje
+            >Message
 
             <textarea
               name="message"
               id="form-message"
               cols="30"
               rows="7"
-              placeholder="Mensaje"
+              placeholder="Message"
               required
             ></textarea>
           </label>
-          <button class="button" type="submit">Enviar mensaje</button>
+          <button class="button" type="submit">Send Message</button>
         </div>
       </form>
-      <footer class="footer" id="contact">
+      <footer class="footer">
         <div class="footer-content">
           <div class="footer-logo">
             <img src="./Images/logo.svg" width="250" height="250" alt="logo" />
@@ -213,7 +212,7 @@
             /></a>
           </div>
           <div class="footer-copyright">
-            <p>Hecho por David Caguazango.</p>
+            <p>By David Caguazango.</p>
             <p>Copyright 2021 - Todos los derechos reservados. Copy</p>
           </div>
         </div>
