--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
           <button class="button" type="submit">Send Message</button>
         </div>
       </form>
+      <a href="mailto:dfcaguazango@gmail.com" id="mailto"></a>
       <footer class="footer">
         <div class="footer-content">
           <div class="footer-logo">
@@ -218,5 +219,21 @@
         </div>
       </footer>
     </div>
+    <script>
+      const $form = document.querySelector("#contact");
+      const $buttonMailto = document.querySelector("#mailto");
+      $form.addEventListener("submit", handleSubmit);
+      function handleSubmit(event) {
+        event.preventDefault();
+        const form = new FormData(this);
+        $buttonMailto.setAttribute(
+          "href",
+          `mailto:dfcaguazango@gmail.com?subject=${form.get("name")}${form.get(
+            "email"
+          )}&body=${form.get("message")}`
+        );
+        $buttonMailto.click();
+      }
+    </script>
   </body>
 </html>
