--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             functional designs and provide solutions.
           </p>
           <div class="social">
-            <a class="button-icon" href="tel:+573177000722"
+            <a class="button-icon" href="tel:573177000722"
               ><img src="./icons/icon-phone.svg"
             /></a>
             <a class="button-icon" href="mailto:dfcaguazango@gmail.com"
