--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             target="_blank"
             href="https://infallible-hodgkin-e37ced.netlify.app/"
             class="button"
-            >Proyecto</a
+            >Deployment</a
           >
         </div>
       </div>
@@ -145,7 +145,7 @@
             target="_blank"
             href="https://unruffled-pike-d0e972.netlify.app/"
             class="button"
-            >Proyecto</a
+            >Deployment</a
           >
         </div>
       </div>
