thir project added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=410, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="icon" type="image/png" href="./Images/Favicon.svg"/>
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -102,6 +103,31 @@
       </section>
       <div class="project" id="project">
         <div class="project-image">
+          <img src="./Images/airbnb.png" alt="" />
+        </div>
+        <div class="project-description">
+          <a class="title" target="_blank" href="https://leonidasesteban.com/"
+            >AirBnb Clone</a
+          >
+          <p>
+            Fully responsive Front-End project deployed in Vercel, using Next.js as framework for React and styled with tailwind.CSS, some of the main features are Server Side Rendering, interactive date-picker and maps.
+          </p>
+          <a
+            target="_blank"
+            href="https://github.com/DavidCagua/airbnb-clone"
+            class="button is-secondary"
+            >Code</a
+          >
+          <a
+            target="_blank"
+            href="https://airbnb-clone-three-omega.vercel.app/"
+            class="button"
+            >Deployment</a
+          >
+        </div>
+      </div>
+            <div class="project" >
+        <div class="project-image">
           <img src="./Images/img.png" alt="" />
         </div>
         <div class="project-description">
@@ -109,8 +135,8 @@
             >Company Validation</a
           >
           <p>
-            MERN full-stack project, companie's requests are displayed so
-            the user can either accept or reject them.
+            Fully responsive MERN full-stack project, companie's requests are displayed so
+            the user can either accept or reject them, the admin can check the compnanie's documents in a modal window.
           </p>
           <a
             target="_blank"
@@ -134,7 +160,7 @@
           <a class="title" target="_blank" href="https://leonidasesteban.com/"
             >Countries API</a
           >
-          <p>React Front-End challenge from Frontedmentor .com, API requests are handled and reducer is used.</p>
+          <p>Fully responsive React Front-End challenge from Frontedmentor.com, API requests are handled, reducer and darkMode is implemented.</p>
           <a
             target="_blank"
             href="https://github.com/DavidCagua/countries-api"
