--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header" id="header">
       <div class="wrapper">
         <div class="header-content">
-          <a class="is-active" href="/">
+          <a class="is-active" href="/portfolio">
             <img
               class="logo"
               src="./Images/logo.svg"
